--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
     ports:
       # set host port 5000 to container port 5000
       - 5000:5000
-    working_dir: /app/
+    working_dir: /app/dash_app
     # start the command to run in the container
-    command: python socket_server.py 
+    command: python app.py 
     
     
